--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<!-- public/index.html: This file is the starting point. It provides the HTML structure. The key detail here is the <div id="root"></div>. Why? This is where our React components (JavaScript-driven UI) will be attached and rendered. But on its own, this file doesn't know anything about React. -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Task Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
